--- a/agentic-control-demo.html
+++ b/agentic-control-demo.html
@@ -135,6 +135,7 @@
       <div class="chip" data-env="UAT">UAT</div>
       <div class="chip" data-env="Sandbox">Sandbox</div>
       <div style="width:28px; height:28px; background:#ddd; border-radius:999px; margin-left:8px;"></div>
+      <span id="llmStatus" style="margin-left:12px; font-size:12px; color:var(--muted);">LLM: loading…</span>
     </div>
   </header>
 
@@ -1064,6 +1065,7 @@
       loadPatients();
       loadContextList();
       updateAgenticPolicyBanner();
+      updateLlmStatus();
       const evalCtx = document.getElementById('evalContext');
       if (evalCtx) applyEvalContext(evalCtx.value || 'discharge');
       if (evalCtx) evalCtx.addEventListener('change', () => applyEvalContext(evalCtx.value || 'discharge'));
